@@ -1391,8 +1391,6 @@ name|r
 init|=
 literal|null
 decl_stmt|;
-try|try
-block|{
 if|if
 condition|(
 name|first
@@ -1448,93 +1446,6 @@ operator|.
 name|bloomFilter
 argument_list|)
 expr_stmt|;
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|EOFException
-name|eofe
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Failed open of reader "
-operator|+
-name|e
-operator|.
-name|toString
-argument_list|()
-operator|+
-literal|"; attempting fix"
-argument_list|,
-name|eofe
-argument_list|)
-expr_stmt|;
-try|try
-block|{
-comment|// Try fixing this file.. if we can.
-name|MapFile
-operator|.
-name|fix
-argument_list|(
-name|this
-operator|.
-name|fs
-argument_list|,
-name|e
-operator|.
-name|getValue
-argument_list|()
-operator|.
-name|getMapFilePath
-argument_list|()
-argument_list|,
-name|HStoreFile
-operator|.
-name|HbaseMapFile
-operator|.
-name|KEY_CLASS
-argument_list|,
-name|HStoreFile
-operator|.
-name|HbaseMapFile
-operator|.
-name|VALUE_CLASS
-argument_list|,
-literal|false
-argument_list|,
-name|this
-operator|.
-name|conf
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|fixe
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Failed fix of "
-operator|+
-name|e
-operator|.
-name|toString
-argument_list|()
-operator|+
-literal|"...continuing; Probable DATA LOSS!!!"
-argument_list|,
-name|fixe
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
 block|}
 name|this
 operator|.
@@ -1965,7 +1876,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/*    * Creates a series of HStoreFiles loaded from the given directory.    * There must be a matching 'mapdir' and 'loginfo' pair of files.    * If only one exists, we'll delete it.    *    * @param infodir qualified path for info file directory    * @param mapdir qualified path for map file directory    * @throws IOException    */
+comment|/*    * Creates a series of HStoreFiles loaded from the given directory.    * There must be a matching 'mapdir' and 'loginfo' pair of files.    * If only one exists, we'll delete it.  Does other consistency tests    * checking files are not zero, etc.    *    * @param infodir qualified path for info file directory    * @param mapdir qualified path for map file directory    * @throws IOException    */
 specifier|private
 name|SortedMap
 argument_list|<
@@ -2330,6 +2241,120 @@ argument_list|)
 expr_stmt|;
 continue|continue;
 block|}
+if|if
+condition|(
+name|isEmptyIndexFile
+argument_list|(
+name|mapfile
+argument_list|)
+condition|)
+block|{
+try|try
+block|{
+comment|// Try fixing this file.. if we can.  Use the hbase version of fix.
+comment|// Need to remove the old index file first else fix won't go ahead.
+name|this
+operator|.
+name|fs
+operator|.
+name|delete
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|mapfile
+argument_list|,
+name|MapFile
+operator|.
+name|INDEX_FILE_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|long
+name|count
+init|=
+name|MapFile
+operator|.
+name|fix
+argument_list|(
+name|this
+operator|.
+name|fs
+argument_list|,
+name|mapfile
+argument_list|,
+name|HStoreFile
+operator|.
+name|HbaseMapFile
+operator|.
+name|KEY_CLASS
+argument_list|,
+name|HStoreFile
+operator|.
+name|HbaseMapFile
+operator|.
+name|VALUE_CLASS
+argument_list|,
+literal|false
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Fixed index on "
+operator|+
+name|mapfile
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"; had "
+operator|+
+name|count
+operator|+
+literal|" entries"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Failed fix of "
+operator|+
+name|mapfile
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"...continuing; Probable DATA LOSS!!!"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+block|}
 comment|// TODO: Confirm referent exists.
 comment|// Found map and sympathetic info file.  Add this hstorefile to result.
 if|if
@@ -2474,17 +2499,62 @@ name|IOException
 block|{
 comment|// Mapfiles are made of 'data' and 'index' files.  Confirm 'data' is
 comment|// non-null if it exists (may not have been written to yet).
-name|Path
-name|dataFile
-init|=
+return|return
+name|isEmptyFile
+argument_list|(
 operator|new
 name|Path
 argument_list|(
 name|mapfile
 argument_list|,
-literal|"data"
+name|MapFile
+operator|.
+name|DATA_FILE_NAME
 argument_list|)
-decl_stmt|;
+argument_list|)
+return|;
+block|}
+comment|/*     * @param mapfile    * @return True if the passed mapfile has a zero-length index component (its    * broken).    * @throws IOException    */
+specifier|private
+name|boolean
+name|isEmptyIndexFile
+parameter_list|(
+specifier|final
+name|Path
+name|mapfile
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Mapfiles are made of 'data' and 'index' files.  Confirm 'data' is
+comment|// non-null if it exists (may not have been written to yet).
+return|return
+name|isEmptyFile
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|mapfile
+argument_list|,
+name|MapFile
+operator|.
+name|INDEX_FILE_NAME
+argument_list|)
+argument_list|)
+return|;
+block|}
+comment|/*     * @param mapfile    * @return True if the passed mapfile has a zero-length index component (its    * broken).    * @throws IOException    */
+specifier|private
+name|boolean
+name|isEmptyFile
+parameter_list|(
+specifier|final
+name|Path
+name|f
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 return|return
 name|this
 operator|.
@@ -2492,7 +2562,7 @@ name|fs
 operator|.
 name|exists
 argument_list|(
-name|dataFile
+name|f
 argument_list|)
 operator|&&
 name|this
@@ -2501,7 +2571,7 @@ name|fs
 operator|.
 name|getFileStatus
 argument_list|(
-name|dataFile
+name|f
 argument_list|)
 operator|.
 name|getLen
