@@ -27,6 +27,7 @@ Hbase Change Log
    HBASE-642   Splitting log in a hostile environment -- bad hdfs -- we drop
                write-ahead-log edits
    HBASE-646   EOFException opening HStoreFile info file (spin on HBASE-645and 550)
+   HBASE-648   If mapfile index is empty, run repair
 
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
